--- a/app/templates/order/schedule_details.hbs
+++ b/app/templates/order/schedule_details.hbs
@@ -15,8 +15,8 @@
           <nav class="tab-bar">
             <section class="left-large inline-content">
               {{fa-icon "angle-left"}}
-              {{#if (is-equal previousRouteName "my_orders")}}
-                {{#link-to 'my_orders' classNames="back"}}{{t "back"}}{{/link-to}}
+              {{#if (is-equal previousRouteName (is-or 'orders.booking' 'orders.goods'))}}
+                {{#link-to previousRouteName order.id classNames="back"}}{{t "back"}}{{/link-to}}
               {{else if isAppointment }}
                 {{#link-to 'order.goods_details' order.id classNames="back"}}{{t "back"}}{{/link-to}}
               {{else}}
