--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -9,8 +9,8 @@
           <nav class="tab-bar">
             <section class="left-large inline-content">
               {{fa-icon "angle-left"}}
-              {{#if (is-equal previousRouteName "my_orders")}}
-                {{#link-to 'my_orders' classNames="back"}}{{t "back"}}{{/link-to}}
+              {{#if (is-equal previousRouteName (is-or 'orders.booking' 'orders.goods'))}}
+                {{#link-to previousRouteName order.id classNames="back"}}{{t "back"}}{{/link-to}}
               {{else}}
                 {{#link-to "request_purpose" classNames="back"}}{{t "back"}}{{/link-to}}
               {{/if}}
