--- a/app/styles/_cart_sidebar.scss
+++ b/app/styles/_cart_sidebar.scss
@@ -2,6 +2,8 @@
   top: 0 !important;
   height: 100% !important;
   left: inherit !important;
+  display: flex;
+  flex-flow: column;
   width: 30rem !important;
   padding: .5rem !important;
 
