GCW-2026 scrolling issue fix

--- a/app/styles/_cart_sidebar.scss
+++ b/app/styles/_cart_sidebar.scss
@@ -2,8 +2,8 @@
   top: 0 !important;
   height: 100% !important;
   left: inherit !important;
-  display: flex;
-  flex-flow: column;
+  display: flex !important;
+  flex-flow: column !important;
   width: 30rem !important;
   padding: .5rem !important;
 
