fix tab highlight

--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -86,7 +86,7 @@
         text-align: center;
         opacity: 0.5;
         cursor: pointer;
-        &.selected {
+        &.active {
           opacity: 1;
         }
         .fa {
