--- a/app/templates/orders/_order_tabs.hbs
+++ b/app/templates/orders/_order_tabs.hbs
@@ -1,17 +1,14 @@
 <div class="row tabs tab-bar">
-  {{!-- {{#if isBooking}} --}}
-    {{#link-to 'orders.booking' order.id tagName="div" classNames="small-6 columns selected booking tab text-center"}}
-      {{#link-to 'orders.booking' order.id}}
-          <i class="item-menu">{{fa-icon 'calendar'}}</i>
-          Booking
-      {{/link-to}}
+  {{#link-to 'orders.booking' order.id tagName="div" classNames="small-6 columns booking tab text-center"}}
+    {{#link-to 'orders.booking' order.id}}
+        <i class="item-menu">{{fa-icon 'calendar'}}</i>
+        Booking
     {{/link-to}}
-  {{!-- {{else}} --}}
-    {{#link-to 'orders.goods' order.id tagName="div" classNames="small-6  goods tab columns text-center"}}
-      {{#link-to 'orders.goods' order.id}}
-          <i class="item-menu">{{fa-icon 'shopping-basket'}}</i>
-          Goods
-      {{/link-to}}
+  {{/link-to}}
+  {{#link-to 'orders.goods' order.id tagName="div" classNames="small-6 goods tab columns text-center"}}
+    {{#link-to 'orders.goods' order.id}}
+        <i class="item-menu">{{fa-icon 'shopping-basket'}}</i>
+        Goods
     {{/link-to}}
-  {{!-- {{/if}} --}}
+  {{/link-to}}
 </div>
