--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -12,8 +12,8 @@
                   {{fa-icon "angle-left"}}
                   {{#if (is-equal previousRouteName (is-or 'orders.booking' 'orders.goods'))}}
                     {{#link-to previousRouteName order.id classNames="back"}}{{t "back"}}{{/link-to}}
-                  {{else if isOnlineOrderDraft }}
-                     {{#link-to "cart" classNames="back"}}{{t "back"}}{{/link-to}}
+                  {{else if (is-equal previousRouteName 'my_orders') }}
+                     {{#link-to "my_orders" classNames="back"}}{{t "back"}}{{/link-to}}
                   {{else}}
                     {{#link-to "home" classNames="back"}}{{t "back"}}{{/link-to}}
                   {{/if}}
