--- a/app/templates/orders/goods.hbs
+++ b/app/templates/orders/goods.hbs
@@ -1,24 +1,7 @@
 <div class="row my_orders">
   <div class="small-12 columns content">
     <div class="order-summary {{order.state}}">
-
-      <div class="row header tab-bar">
-        {{#link-to 'my_orders'}}
-          <div class="columns small-2 close-order-summary">
-            <i class="fa fa-lg fa-times-circle-o" aria-hidden="true"></i>
-          </div>
-        {{/link-to}}
-        <div class="columns small-8 strong">
-            {{ order.code }}
-        </div>
-        <div class="columns small-2 header-icon">
-            <div class="icon">
-            <i class="fa fa-lg fa-{{ order.stateIcon }}"></i>
-            </div>
-            <div class="sub-text">{{ t (concat 'my_orders.' order.state) }}</div>
-        </div>
-      </div>
-
+      {{partial 'orders/order_header'}}
       {{partial 'orders/order_tabs'}}
       <div class="tab-content">
         <div class="goods-tab">
