--- a/app/templates/orders/_order_header.hbs
+++ b/app/templates/orders/_order_header.hbs
@@ -11,6 +11,7 @@
     <div class="icon">
       <i class="fa fa-lg fa-{{ order.stateIcon }}"></i>
     </div>
+    {{order.state}}
     <div class="sub-text">{{ t (concat 'my_orders.' order.state) }}</div>
   </div>
 </div>
