--- a/app/templates/orders/_message_template.hbs
+++ b/app/templates/orders/_message_template.hbs
@@ -1,6 +1,6 @@
 <section class="message-section">
   <div class="row">
-    <div class="small-12 columns {{if displayChatNote "message-container-expanded" "message_container"}}">
+    <div class="small-10 small-offset-1  columns {{if displayChatNote "message-container-expanded" "message_container"}}">
       {{#each groupedMessages as |messages|}}
       <div class="small-12 columns day_seperator">
         <span>{{display-messages-day messages.firstObject.createdDate (t 'messages.day.today')}}</span>
@@ -53,7 +53,7 @@
             </div>
             <div class="small-3 large-2 medium-2 columns">
               {{#online-button classNames="button" onClick=(action "sendMessage")}}
-              {{t "messages.send"}}
+                {{t "messages.send"}}
               {{/online-button}}
             </div>
           </div>
