remove redundant code fix browse chat tab UI

--- a/app/templates/orders/_order_tabs.hbs
+++ b/app/templates/orders/_order_tabs.hbs
@@ -1,26 +1,19 @@
 <div class="row tabs tab-bar">
-  {{#link-to 'orders.booking' order.id tagName="div" classNames="small-4 columns booking tab text-center"}}
-    {{#link-to 'orders.booking' order.id}}
-        <i class="item-menu">{{fa-icon 'calendar'}}</i>
-        <div class="tab_name">
-          Booking
-        </div>
+  {{#each orderSummaryTabs as |tab|}}
+    {{#link-to (concat 'orders.' tab.routeName) order.id tagName="div" classNames=(concat "tab columns small-4 " tab.routeName)}}
+      {{#link-to (concat 'orders.' tab.routeName) order.id}}
+        <i class="fa fa-{{ tab.icon }}" aria-hidden="true"></i>
+      {{/link-to}}
     {{/link-to}}
-  {{/link-to}}
-  {{#link-to 'orders.goods' order.id tagName="div" classNames="small-4 goods tab columns text-center"}}
-    {{#link-to 'orders.goods' order.id}}
-        <i class="item-menu">{{fa-icon 'shopping-basket'}}</i>
-        <div class="tab-name">
-          Goods
-        </div>
+  {{/each}}
+</div>
+
+<div class="row tabs tab-name">
+  {{#each orderSummaryTabs as |tab|}}
+    {{#link-to (concat 'orders.' tab.routeName) order.id tagName="div" classNames=(concat " tab columns small-4 " tab.routeName)}}
+      {{#link-to (concat 'orders.' tab.routeName) order.id}}
+        {{ tab.displayName }}
+      {{/link-to}}
     {{/link-to}}
-  {{/link-to}}
-  {{#link-to 'orders.conversation' order.id tagName="div" classNames="small-4 conversation tab columns text-center"}}
-    {{#link-to 'orders.conversation' order.id}}
-      <i class="item-menu">{{fa-icon 'comment'}}</i>
-      <div class="tab-name">
-        Messages
-      </div>
-    {{/link-to}}
-  {{/link-to}}
+  {{/each}}
 </div>
