--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -9,8 +9,8 @@
           <nav class="tab-bar">
             <section class="left-large inline-content">
               {{fa-icon "angle-left"}}
-              {{#if (is-equal previousRouteName (is-or 'orders.booking' 'orders.goods'))}}
-                {{#link-to previousRouteName order.id classNames="back"}}{{t "back"}}{{/link-to}}
+              {{#if (is-equal prevPath (is-or 'orders.booking' 'orders.goods'))}}
+                {{#link-to prevPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
               {{else}}
                 {{#link-to "request_purpose" classNames="back"}}{{t "back"}}{{/link-to}}
               {{/if}}
@@ -163,8 +163,8 @@
                  <a {{action 'submit' target=form}} id="client-info-submit" class="button expand"> {{t 'save_changes'}} </a>
                 </div>
                 <div class="small-6 medium-6 large-6 columns">
-                  {{#if (is-equal previousRouteName "my_orders")}}
-                    {{#link-to 'my_orders' classNames="button expand"}}
+                  {{#if (is-equal prevPath "orders.booking")}}
+                    {{#link-to 'orders.booking' order.id classNames="button expand"}}
                       {{t 'discard_changes'}}
                     {{/link-to}}
                   {{else}}
