--- a/app/styles/_messages.scss
+++ b/app/styles/_messages.scss
@@ -1,34 +1,28 @@
-.message_container {
-  @media #{$large-only} {
-    max-height: 22.6rem;
-    height: 22.6rem;
-    overflow: scroll;
-  }
-
-  @media #{$small-only} {
-    min-height: 20rem;
+.btm {
+  height: 60px;
+  margin: 0 auto;
+  text-align: center;
+  >div {
+    position: fixed;
+    bottom: 0;
+    .button {
+      margin: 10px 0;
+    }
   }
 }
 
-.message-container-expanded {
-  @media #{$large-only} {
-    max-height: 20.6rem;
-    height: 20.6rem;
-    overflow: scroll;
-  }
-
-  @media #{$small-only} {
-    min-height: 20rem;
-  }
-
-  @media #{$medium-only} {
-    min-height: 26rem;
-  }
+.message-section{
+  margin-top: 0.5em;
+  margin-bottom: 0.2em;
 }
 
 .message_details {
   font-size: .7rem;
   margin-bottom: .5rem;
+}
+
+.user_icon {
+  color: dimgrey;
 }
 
 .my_message {
@@ -38,32 +32,10 @@
   width: 80%;
   padding: .8rem;
   margin-right: 2%;
-  margin-top: .8rem;
   margin-bottom: .8rem;
   font-size: .9rem;
   position: relative;
   -webkit-border-radius: 10px;
-}
-
-
-.received_message {
-  background-color: #fff;
-  color: #000;
-  width: 80%;
-  border-radius: .5rem;
-  padding: .8rem;
-  margin-top: .8rem;
-  font-size: .9rem;
-  position: relative;
-  -webkit-border-radius: 10px;
-
-  @media #{$small-only} {
-    margin-left: 9%
-  }
-
-  @media #{$large-only} {
-    margin-left: 4%
-  }
 }
 
 .day_seperator {
@@ -71,7 +43,7 @@
   border-bottom: 1px solid #334f75;
   width: 100%;
   line-height: .1em;
-  margin: 30px 0 30px;
+  margin: 10px 0 20px;
 
   span {
     padding: 0 10px;
@@ -80,10 +52,24 @@
   }
 }
 
-.btm{
-  height: 60px;
-  margin: 0 auto;
-  text-align: center;
+.received_message {
+  background-color: #fff;
+  color: #000;
+  width: 80%;
+  border-radius: .5rem;
+  padding: .8rem;
+  margin-left: 2%;
+  margin-bottom: .8rem;
+  font-size: .9rem;
+  position: relative;
+  -webkit-border-radius: 10px;
+  @media #{$small-only} {
+    margin-left: 9%
+  }
+
+  @media #{$large-only} {
+    margin-left: 4%
+  }
 }
 
 .message-form {
@@ -97,6 +83,7 @@
 }
 
 .message-base {
+  padding-top: .2em;
   background-color: #dee4eb;
 
   .button {
@@ -110,10 +97,22 @@
   }
 }
 
+.message-textbar{
+  @media #{$small-only}{
+    width: 100% !important;
+  }
+
+  @media #{$large-only} {
+    width: 62.1% !important;
+  }
+
+  @media #{$medium-only} {
+    width: 63.2% !important;
+  }
+}
 .chat_note {
   color: white;
   margin-bottom: 0.5rem;
-  text-align: center;
 
   i {
     color: #f34d4f;
