--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -88,6 +88,9 @@
         cursor: pointer;
         &.active {
           opacity: 1;
+          &.active-tab{
+            border-bottom: 3px solid #334f75;
+          }
         }
         .fa {
           margin-right: 0.5rem;
