--- a/app/templates/orders/_order_tabs.hbs
+++ b/app/templates/orders/_order_tabs.hbs
@@ -10,7 +10,7 @@
 
 <div class="row tabs tab-name">
   {{#each orderSummaryTabs as |tab|}}
-    {{#link-to (concat 'orders.' tab.routeName) order.id tagName="div" classNames=(concat " tab columns small-4 " tab.routeName)}}
+    {{#link-to (concat 'orders.' tab.routeName) order.id tagName="div" classNames=(concat " tab columns active-tab small-4 " tab.routeName)}}
       {{#link-to (concat 'orders.' tab.routeName) order.id}}
         {{ tab.displayName }}
       {{/link-to}}
