--- a/app/templates/_cart_truck_icon.hbs
+++ b/app/templates/_cart_truck_icon.hbs
@@ -1,4 +1,4 @@
 <i class="fa fa-truck cart-icon" aria-hidden="true"></i>
-<span class="unread">
+<span class="cart unread">
   <div class="unread_length">{{cartLength}}</div>
 </span>
