--- a/app/styles/_messages.scss
+++ b/app/styles/_messages.scss
@@ -65,6 +65,43 @@
   -webkit-border-radius: 10px;
 }
 
+.unread_message {
+  min-height: 1rem;
+  min-width: 1rem;
+  height: auto;
+  width: auto;
+  text-align: center;
+  position: absolute;
+  background-color: #e61414;
+  border-radius: 50%;
+  display: inline-block;
+  color: white !important;
+  margin-left: 1.5em;
+  margin-top: -0.5em;
+}
+
+.message_tab_count{
+  height:1em;
+  width:1em;
+  position: absolute;
+  background-color: #e61414;
+  border-radius: 50%;
+  display: inline-block;
+  color: white;
+  margin-left: 1.5em;
+  margin-top: 0.3em;
+  .unread_length{
+    font-size: 0.7rem;
+    color: white;
+    position: absolute;
+    margin-top: -1.2em;
+    margin-left: -0.2em;
+    @media #{$small-only}{
+      margin-left: -0.3em;
+    }
+  }
+}
+
 .message-form {
   padding-top: .1rem;
   padding-right: .2rem;
