--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -12,7 +12,7 @@
               {{#if (is-equal prevPath (is-or 'orders.booking' 'orders.goods'))}}
                 {{#link-to prevPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
               {{else}}
-                {{#link-to "request_purpose" classNames="back"}}{{t "back"}}{{/link-to}}
+                {{#link-to "request_purpose" (query-params bookAppointment=order.isAppointment orderId=order.id) classNames="back"}}{{t "back"}}{{/link-to}}
               {{/if}}
             </section>
              <section class="middle tab-bar-section">
