--- a/app/templates/orders/unread_message_bubble.hbs
+++ b/app/templates/orders/unread_message_bubble.hbs
@@ -1,5 +1,3 @@
 {{#if order.hasUnreadMessages}}
-  <span class='unread_message'>
-    <span class='unread_length'>{{order.unreadMessagesCount}}</span>
-  </span>
+  <div class='unread_message'>{{order.unreadMessagesCount}}</div>
 {{/if}}
