--- a/app/templates/orders/_order_tabs.hbs
+++ b/app/templates/orders/_order_tabs.hbs
@@ -1,4 +1,4 @@
-<div class="row tabs tab-bar my-orders-tab-bar">
+<div class="row tabs tab-icons my-orders-tab-bar">
   {{#link-to 'orders.booking' order.id tagName="div" classNames="small-4 columns booking tab text-center"}}
     {{#link-to 'orders.booking' order.id}}
       <i class="item-menu">{{fa-icon 'calendar'}}</i>
@@ -14,9 +14,7 @@
   {{#link-to 'orders.conversation' order.id tagName="div" classNames="small-4 messages tab columns text-center"}}
     {{#link-to 'orders.conversation' order.id}}
       {{#if order.hasUnreadMessages}}
-        <span class='message_tab_count'>
-          <span class='unread_length'>{{order.unreadMessagesCount}}</span>
-        </span>
+        {{partial 'orders/unread_message_bubble'}}
       {{/if}}
       <i class="item-menu">{{fa-icon 'comments-o'}}</i>
     {{/link-to}}
