fix css for v-large screens

--- a/app/styles/_messages.scss
+++ b/app/styles/_messages.scss
@@ -98,6 +98,9 @@
 }
 
 .message-textbar{
+  @media #{$xlarge-only} {
+    width: 50.5% !important;
+  }
   @media #{$small-only}{
     width: 100% !important;
   }
