--- a/app/templates/order/schedule_details.hbs
+++ b/app/templates/order/schedule_details.hbs
@@ -35,7 +35,7 @@
 
           {{#validate-appointment}}
             {{#validatable-form onSubmit=(action 'saveTransportDetails') as |form|}}
-              <section class="main-section client-information large-10 large-offset-1 medium-10 medium-offset-1 columns appointment-date small-10 small-offset-1">
+              <section class="main-section client-information large-10 large-offset-1 medium-12 columns appointment-date small-12">
                 <div class="small-12 columns type-of-id-text">
                   {{t 'order.appointment.transport'}}
                 </div>
