fix tab-bar bottom globally

--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -97,6 +97,20 @@
         }
       }
 
+      .tabs.tab-name{
+        i {
+          font-size: 130%
+        }
+        border-bottom: 1px solid $light-blue;
+        font-size: 100%;
+        z-index: 100;
+      }
+
+      .tabs.tab-bar.my-orders-tab-bar{
+        border-bottom: unset;
+      }
+
+
       // ---- TAB DATA
       .tab-content {
 
