--- a/app/styles/templates/_application.scss
+++ b/app/styles/templates/_application.scss
@@ -7,16 +7,8 @@
 .cr-logo a {
   text-align: center;
 }
-.tabs.tab-bar {
-  i {
-    font-size: 130%
-  }
-  border-bottom: unset;
-  font-size: 100%;
-  z-index: 100;
-}
 
-.tabs.tab-name {
+.tab-bar{
   border-bottom: 1px solid $light-blue;
   z-index: 100;
 }
