fix schedule radio button text issue for large and medium screen

--- a/app/styles/templates/_schedule_details.scss
+++ b/app/styles/templates/_schedule_details.scss
@@ -4,6 +4,12 @@
 
     .custom_radio_buttons {
       label.radio-button-text {
+        @media #{$large-only}{
+          font-size: 0.8rem;
+        }
+        @media #{$medium-only}{
+          font-size: 0.8rem;
+        }
         margin-top: 0;
       }
       .radio-button {
