--- a/app/templates/orders/_message_template.hbs
+++ b/app/templates/orders/_message_template.hbs
@@ -45,7 +45,7 @@
           {{#validatable-form class="form-horizontal" onSubmit=(action 'sendMessage') as |form|}}
           <div class="row ui">
             <div class="small-9 large-10 medium-9 columns">
-              {{variable-height-textarea value=body name="body" required=true parentDiv="message-section"}}
+              {{variable-height-textarea value=body name="body" parentDiv="message-section"}}
             </div>
             <div class="small-3 large-2 medium-3 columns">
               {{#online-button classNames="button" onClick=(action "sendMessage") actionArgs=true}}
