fix minor issues in unread count css

--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -97,6 +97,13 @@
         }
       }
 
+      .tabs.tab-icons{
+        margin-top: 0.6rem;
+        i {
+          font-size: 1.5rem;
+        }
+        z-index: 100;
+      }
       .tabs.tab-name{
         i {
           font-size: 130%
@@ -105,11 +112,6 @@
         font-size: 100%;
         z-index: 100;
       }
-
-      .tabs.tab-bar.my-orders-tab-bar{
-        border-bottom: unset;
-      }
-
 
       // ---- TAB DATA
       .tab-content {
