--- a/app/templates/orders/_order_tabs.hbs
+++ b/app/templates/orders/_order_tabs.hbs
@@ -1,4 +1,4 @@
-<div class="row tabs tab-icons my-orders-tab-bar">
+<div class="row tabs tab-icons">
   {{#link-to 'orders.booking' order.id tagName="div" classNames="small-4 columns booking tab text-center"}}
     {{#link-to 'orders.booking' order.id}}
       <i class="item-menu">{{fa-icon 'calendar'}}</i>
